--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -13,6 +13,15 @@ body {
   fill: steelblue;
 }
 
+.x.axis path {
+  display: none;
+}
+
+.line {
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
 
 /**
  * For the location map
