--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -56,7 +56,7 @@
 				xMin, xMax, yMin, yMax,
 				cbScheme = "RdYlBu",
 				focusPointLayer, focusHex, focusNonHex,
-				dataURL = 'http://localhost:5000/data/observaties/?soort=bruin blauwtje';
+				dataURL = '/data/observaties/?soort=bruin blauwtje';
 
 			function init()
 			{
