--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -23,6 +23,12 @@ body {
   stroke-width: 1.5px;
 }
 
+.brush .extent {
+  stroke: #fff;
+  fill-opacity: .125;
+  shape-rendering: crispEdges;
+}
+
 /**
  * For the location map
  */
