--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -44,6 +44,14 @@ body {
   pointer-events: all;
 }
 
+.grid .tick {
+    stroke: lightgrey;
+    opacity: 0.7;
+}
+.grid path {
+    stroke-width: 0;
+}
+
 .subunit { fill: #ddc; }
 .subunit.BFR { fill: #cdd; }
 .subunit.BWR { display: none}
