--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,102 +2,119 @@
 
 
 {% block js %}
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-<script src="/static/js/leaflet-heat.js"></script>
+
 {% endblock %}
 
 
 {% block main %}
-<div class= "row" id="soort_selector">
-  <div class="col-md-12">
-    <form class="soortSelector" action="" method="post">
-      <select id="myselect" name="myselect">
-        <option selected="selected">Kies vlindersoort</option>
-      </select>
-    </form>
+<!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#page-top">Vlinderobservaties</a>
+            </div>
 
-    <script>
-      $.ajax({
-        url: 'http://' + window.location.host + '/data/soorten/',
-        dataType: "json",
-        contentType: "application/json",
-        success: function(json) {
-          $.each(json, function(i, value) {
-            $('#myselect')
-              .append($('<option value="'
-                                   + value.naam_nl
-                                   + '">')
-              .text(value.naam_nl));
-          });
-        }
-      });
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="/visualisatie">Visualisatie</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#about">Meer info</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
 
-    var selectedSoort;
-	  function updateSoort(soort) {
-      selectedSoort = soort;
-      var start = "20050101"
-      var end = "20141231"
-      $.ajax({
-            url: 'http://' + window.location.host + '/data/observaties/',
-            data: {"soort": soort, "start_date": start, "end_date": end},
-            dataType: "json",
-            contentType: "application/json",
-            success: function(data) {
-              renderTimeline(data);
-              updateTimeGraph(data, null, null);
-              renderHeatMap();
-              updateHeatMap(data);
-            }
-      });
-	  }
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <img class="img-responsive" src="/static/img/header.png" alt="">
+                    <div class="control-group">
+                      <select class="searchbox center form-control input-lg" placeholder="Kies een vlinder...">
+                        <option></option>
+                      </select>
+                      <script>
 
-    var selectedYear;
-    function updateYear(year) {
-      selectedYear = year;
-      var start = new Date(year, 0, 1);
-      var end = new Date(year, 11, 31);
-      Date.prototype.yyyymmdd = function() {
-         var yyyy = this.getFullYear().toString();
-         var mm = (this.getMonth()+1).toString(); // getMonth() is zero-based
-         var dd  = this.getDate().toString();
-         return yyyy + (mm[1]?mm:"0"+mm[0]) + (dd[1]?dd:"0"+dd[0]); // padding
-      };
+                      $.ajax({
+                        url: 'http://' + window.location.host + '/data/soorten/',
+                        dataType: "json",
+                        contentType: "application/json",
+                        success: function(json) {
+                          $.each(json, function(i, value) {
+                            $('.searchbox')
+                              .append($('<option value="'
+                                                   + value.naam_nl
+                                                   + '">')
+                              .text(value.naam_nl));
+                          });
+                          $('.searchbox').selectize();
+                        }
+                      });
 
-      $.ajax({
-            url: 'http://' + window.location.host + '/data/observaties/',
-            data: {"soort": selectedSoort, "start_date": start.yyyymmdd(), "end_date": end.yyyymmdd()},
-            dataType: "json",
-            contentType: "application/json",
-            success: function(data) {
-              updateTimeGraph(data, start, end);
-              updateHeatMap(data);
-            }
-      });
-    }
+                      $(".searchbox").change( function() {
+                        window.location.href = "/visualisatie?soort=" + $(this).val();
+                      });
+                      </script>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
-	  //eventhandler ipv onchange, anders kan het zijn dat functies in externe .js files niet gevonden worden
-	  $("#myselect").change( function() {
-		    updateSoort($(this).val());
-	  });
-    </script>
-  </div>
-</div>
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Over de visualisatie</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Si quicquam extra virtutem habeatur in bonis. Idque testamento cavebit is, qui nobis quasi oraculum ediderit nihil post mortem ad nos pertinere? Quasi ego id curem, quid ille aiat aut neget. Quare conare, quaeso. Omnes enim iucundum motum, quo sensus hilaretur. Duo Reges: constructio interrete. </p>
+                <p>Homines optimi non intellegunt totam rationem everti, si ita res se habeat. Quid enim? Eaedem enim utilitates poterunt eas labefactare atque pervertere. Quasi vero, inquit, perpetua oratio rhetorum solum, non etiam philosophorum sit. </p>
+              </div>
+            </div>
+        </div>
+    </section>
 
-<div class="row">
-  <div class="col-xs-6 pull-left" id="timeline">
-    <script src="/static/js/graph_bigTimeline.js"></script>
-  </div>
-  <div class="col-xs-6" id="heatmap">
-    <script src="/static/js/heatmap.js"></script>
-  </div>
-</div>
-
-<div class="row">
-	<div class="col-xs-6" id="monthgraph">
-		<script src="/static/js/timelinechart.js"></script>
-	</div>
-</div>
+    <!-- About Section -->
+    <section class="success" id="about2">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Over de data</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-2">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Si quicquam extra virtutem habeatur in bonis. Idque testamento cavebit is, qui nobis quasi oraculum ediderit nihil post mortem ad nos pertinere? Quasi ego id curem, quid ille aiat aut neget. Quare conare, quaeso. Omnes enim iucundum motum, quo sensus hilaretur. Duo Reges: constructio interrete. </p>
+                </div>
+                <div class="col-lg-4">
+                  <p>Homines optimi non intellegunt totam rationem everti, si ita res se habeat. Quid enim? Eaedem enim utilitates poterunt eas labefactare atque pervertere. Quasi vero, inquit, perpetua oratio rhetorum solum, non etiam philosophorum sit. </p>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
