--- a/app/templates/vis.html
+++ b/app/templates/vis.html
@@ -177,7 +177,7 @@
           <script src="/static/js/graph_bigTimeline.js"></script>
         </div>
         <div class="col-xs-6" id="overviewMap" class="map">
-        <script src="/static/js/binMap.js"></script>
+        <script src="/static/js/binmap.js"></script>
         </div>
       </div>
 
