--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -5,6 +5,7 @@
  */
 
 body {
+    font: 10px sans-serif;
     overflow-x: hidden;
 }
 
@@ -341,17 +342,6 @@ footer .footer-col {
 footer .footer-below {
     padding: 25px 0;
     background-color: #233140;
-}
-
-.btn-social {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    border: 2px solid #fff;
-    border-radius: 100%;
-    text-align: center;
-    font-size: 20px;
-    line-height: 45px;
 }
 
 .btn:focus,
