--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,67 +1,69 @@
 <!doctype html>
 <html class="no-js" lang="en">
-<head>
-  <meta charset="utf-8">
+    <head>
+        <meta charset="utf-8">
 
-  <title>{% block title %}InfoVis | Data Chartists{% endblock %}</title>
+        <title>{% block title %}InfoVis | Data Chartists{% endblock %}</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="Data Chartists">
-  <link rel="shortcut icon" href="/static/favicon.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="Data Chartists">
+        <link rel="shortcut icon" href="/static/favicon.png">
 
-  <!-- HTML5 shim, for IE 6-8 support of HTML elements -->
-  <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+        <!-- HTML5 shim, for IE 6-8 support of HTML elements -->
+        <!--[if lt IE 9]>
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
 
-  <link rel="stylesheet" href="/static/css/bootstrap.css">
-  <link rel="stylesheet" href="/static/css/style.css">
-  <link rel="stylesheet" href="/static/css/selectize.css">
-  <link rel="stylesheet" href="/static/css/freelancer.css">
-  {% block css %}{% endblock %}
+        <link rel="stylesheet" href="/static/css/libs/bootstrap.css">
+        <link rel="stylesheet" href="/static/css/libs/selectize.css">
+        <link rel="stylesheet" href="/static/css/main.css">
+        {% block css %}{% endblock %}
 
-  <!-- Custom Fonts -->
-  <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+        <!-- Custom Fonts -->
+        <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+        <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
-  <!-- Need Modernizr? Uncomment the following script. -->
-  <!-- <script src="/static/js/modernizr.js"></script> -->
+        <!-- Need Modernizr? Uncomment the following script. -->
+        <!-- <script src="/static/js/modernizr.js"></script> -->
 
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="/static/js/libs/jquery.js">\x3C/script>')</script>
-  <script src="/static/js/freelancer.js"></script>
-  <script src="/static/js/selectize.js"></script>
- <!-- Additional JavaScript libraries and plugins... -->
-  {% block js %}{% endblock %}
+        <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="/static/js/libs/jquery.js">\x3C/script>')</script>
+        <script src="/static/js/libs/jquery.easing.js"></script>
+        <script src="/static/js/libs/bootstrap.js"></script>
+        <script src="/static/js/libs/selectize.js"></script>
+        <script src="/static/js/main.js"></script>
 
-</head>
+        <!-- Additional JavaScript libraries and plugins... -->
+        {% block js %}{% endblock %}
 
-<body>
+    </head>
 
-    {% block main %}{% endblock %}
+    <body>
 
-  <footer>
-    {% include "footer.html" %}
-  </footer>
+        {% block main %}{% endblock %}
 
-
-   <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-XXXXX-X to be your site's ID -->
-  <script>
-    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-    s.parentNode.insertBefore(g,s)}(document,'script'));
-  </script>
+        <footer>
+            {% include "footer.html" %}
+        </footer>
 
 
-  <!-- Prompt IE < 8 users to install Chrome Frame.  -->
-  <!--[if lt IE 8 ]>
-    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-    <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
-  <![endif]-->
+        <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-XXXXX-X to be your site's ID -->
+        <script>
+        var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
+        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+        s.parentNode.insertBefore(g,s)}(document,'script'));
+        </script>
 
-</body>
+
+        <!-- Prompt IE < 8 users to install Chrome Frame.  -->
+        <!--[if lt IE 8 ]>
+        <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+        <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+        <![endif]-->
+
+    </body>
 </html>
