--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -14,6 +14,11 @@ p {
     font-size: 18px;
 }
 
+span {
+    font-family: "Calibri","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 16px;
+}
+
 p.small {
     font-size: 16px;
 }
