deselecten bar, 2008-2014, bugfix brede bars

--- a/app/templates/visualisatie.html
+++ b/app/templates/visualisatie.html
@@ -62,6 +62,10 @@ function updateSoort(soort) {
     });
 }
 
+function refresh() {
+    updateSoort(selectedSoort);
+}
+
 // update het geselecteerde jaar
 var selectedYear;
 function updateYear(year) {
