Foutjes in bar chart + refactor
Er stonden wat foutjes in de bar chart o.a.:
- aantal observaties werd weergegeven ipv aantal gespotte vlinders
- verkeerde schaal op x-as (jaren zijn discontinu ipv continu)

De code meteen ook maar volledig gerefactord.

--- a/app/templates/visualisatie.html
+++ b/app/templates/visualisatie.html
@@ -52,7 +52,7 @@ function updateSoort(soort) {
         dataType: "json",
         contentType: "application/json",
         success: function(data) {
-            renderTimeline(data);
+            barGraph.update(data)
             updateTimeGraph(data, null, null);
             binMap.updateData(data);
             $("#loader").hide();
@@ -60,10 +60,6 @@ function updateSoort(soort) {
             //updateHeatMap(data);
         }
     });
-}
-
-function refresh() {
-    updateSoort(selectedSoort);
 }
 
 // update het geselecteerde jaar
@@ -195,7 +191,7 @@ $(function() {
 
         <div class="row">
             <div class="col-xs-6 pull-left" id="timeline">
-                <script src="/static/js/graph_bigTimeline.js"></script>
+                <script src="/static/js/barGraph.js"></script>
             </div>
             <div class="col-xs-6" id="overviewMap" class="map">
                 <script src="/static/js/binmap.js"></script>
