--- a/app/static/css/graphs.css
+++ b/app/static/css/graphs.css
@@ -34,6 +34,17 @@
 }
 
 /**
+ * Bar chart
+ */
+.bar {
+  fill: steelblue;
+}
+
+.activeBar {
+  fill: #18bc9c;
+}
+
+/**
  * For the heatmap
  */
 #heatmap {
