--- a/app/templates/visualisatie.html
+++ b/app/templates/visualisatie.html
@@ -174,7 +174,7 @@ $(function() {
                 <div class="col-md-4">
                     <img id="vlinder-img" src="#" alt="vlinder" class="img-rounded">
                 </div>
-                <div class="col-md-7 offset-1">
+                <div class="col-md-8">
                     <p>
                     <a id="wiki" href="#"><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Wikipedia</a>
                     </p>
@@ -190,19 +190,19 @@ $(function() {
         </div>
 
         <div class="row">
-            <div class="col-xs-6 pull-left" id="timeline">
+            <div class="col-md-6" id="timeline">
                 <script src="/static/js/barGraph.js"></script>
             </div>
-            <div class="col-xs-6" id="overviewMap" class="map">
+            <div class="col-md-6" id="overviewMap" class="map">
                 <script src="/static/js/binmap.js"></script>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-xs-6" id="monthgraph">
+            <div class="col-md-6" id="monthgraph">
                 <script src="/static/js/timelinechart.js"></script>
             </div>
-            <div class="col-xs-6" id="focusMap" class="map">
+            <div class="col-md-6" id="focusMap" class="map">
             </div>
         </div>
     </div>
