--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -382,3 +382,25 @@ footer .footer-below {
   max-height:100%;
 }
 
+.thumbnail {
+    position:relative;
+    overflow:hidden;
+}
+ 
+.caption {
+    position:absolute;
+    top:0;
+    right:0;
+    background:rgba(64, 64, 64, 0.75);
+    width:100%;
+    height:100%;
+    padding:2%;
+    display: none;
+    text-align:center;
+    color:#fff !important;
+    z-index:2;
+}
+
+.caption p {
+    font: 14px calibri;
+}
