kleuren aangepast van binmap
groene kleuren van lichtgroen (weinig vlinders) naar donkergroen (veel
vlinders)

--- a/app/templates/binmap.html
+++ b/app/templates/binmap.html
@@ -54,7 +54,7 @@
 				hexset, hexI = 15, map, focusMap, data, scale, countMax,
 				numClasses = 8,
 				xMin, xMax, yMin, yMax,
-				cbScheme = "RdYlBu",
+				cbScheme = "Greens",
 				focusPointLayer, focusHex, focusNonHex,
 				dataURL = '/data/observaties/?soort=bruin blauwtje';
 
